Add node engine specification to package.json
- Fixes #7

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "test": "mocha test/"
   },
+  "engines": {
+    "node": ">=6"
+  },
   "devDependencies": {
     "mocha": "^4.0.1"
   }
