--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "barefoot",
   "description": "Simple event based IRC client socket",
   "version": "0.0.1-alpha.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/stigok/barefoot.git"
+  },
   "scripts": {
     "test": "mocha test/"
   },
